--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+:root {
+    --spacing-xs: 2px;
+    --spacing-sm: 6px;
+    --spacing-md: 12px;
+    --spacing-lg: 32px;
+
+    --sidebar-width: 240px;
+
+    --font-size-xs: 1.2rem;
+    --font-size-sm: 1.3rem;
+    --font-size-md: 1.4rem;
+
+    --color-background: #fafafa;
+    --color-background-secondary: #eee;
+    --color-background-tertiary: #ddd;
+    --color-white: #fff;
+
+    --color-primary: #1f1f23;
+    --color-secondary: #53535f;
+    --color-shadow: rgba(0, 0, 0, 0.08);
+    --color-indigo: #874bf6;
+    --color-indigo-secondary: #742ff5;
+    --color-red: #e91916;
+}
+
+html {
+    font-size: 10px;
+    background-color: var(--color-background);
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
