--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-    min-height: 100vh;
+    padding: var(--spacing-lg);
 }
 
 .Spinner-dot {
