--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -10,12 +10,19 @@
     color: var(--color-white);
     border: 0;
     font-size: var(--font-size-md);
-    font-weight: 600;
-    border-radius: 2px;
+    font-weight: 800;
+    height: 42px;
+    border-radius: 42px;
     padding: var(--spacing-md) var(--spacing-lg);
     cursor: pointer;
+
+    transition: 100ms ease-in background-color;
 }
 
 .LoginForm-button:hover {
     background-color: var(--color-indigo-secondary);
+}
+
+.LoginForm-button:active {
+    background-color: var(--color-indigo-tertiary);
 }
