--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -22,6 +22,7 @@
     font-weight: 800;
     padding: var(--spacing-md) var(--spacing-lg);
     color: var(--color-primary);
+    border-bottom: 1px solid var(--color-background-tertiary);
 }
 
 .Sidebar-listitem {
@@ -30,6 +31,13 @@
     align-items: center;
     overflow: hidden;
     padding: var(--spacing-md);
+    border-bottom: 1px solid var(--color-background-tertiary);
+}
+
+.Sidebar-listitem:last-child {
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    border-bottom: 0;
 }
 
 .Sidebar-listitem:hover {
