--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ html {
     font-size: 10px;
     background-color: var(--color-background);
     height: 100%;
+    overflow-y: scroll;
 }
 
 body {
