--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 
     --color-primary: #1f1f23;
     --color-secondary: #53535f;
+    --color-tertiary: #777777;
     --color-shadow: rgba(0, 0, 0, 0.08);
     --color-indigo: #874bf6;
     --color-indigo-secondary: hsl(263, 64%, 53%);
