Start using a router

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,6 +29,7 @@
 .Header-linkactive {
     color: var(--color-indigo);
     fill: var(--color-indigo);
+    text-decoration: none;
 }
 
 .Header-listitemicon {
