--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,15 @@ code {
         monospace;
 }
 
+a {
+    text-decoration: none;
+    color: var(--color-indigo);
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #root {
     height: 100%;
 }
