--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .Header {
+    position: sticky;
+    top: 0;
     overflow: hidden;
-    border-right: 1px solid var(--color-background-tertiary);
-    box-sizing: border-box;
 }
 
 .Header-list {
