--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,7 +1,7 @@
 .Sidebar {
+    position: sticky;
+    top: 0;
     overflow: hidden;
-    border-left: 1px solid var(--color-background-tertiary);
-    box-sizing: border-box;
 }
 
 .Sidebar-list {
