Minor fixes and README update

--- a/src/components/DefaultLayout.css
+++ b/src/components/DefaultLayout.css
@@ -13,6 +13,7 @@
 
 .DefaultLayout-timeline {
     display: flex;
+    min-height: 100%;
     flex-direction: column;
     border-left: 1px solid var(--color-background-tertiary);
     border-right: 1px solid var(--color-background-tertiary);
