--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -15,6 +15,7 @@
     border-radius: 42px;
     padding: var(--spacing-md) var(--spacing-lg);
     cursor: pointer;
+    -webkit-appearance: none;
 
     transition: 100ms ease-in background-color;
 }
